--- a/.github/workflows/call-trivy.yml
+++ b/.github/workflows/call-trivy.yml
@@ -7,3 +7,5 @@ jobs:
  scan:
    name: Scan
    uses: hardlydevops/actions/.github/workflows/reusable-trivy.yml@add-space
+   with:
+     image: 'ghcr.io/hardlydevops/wordsmith-web:latest'
