--- a/.github/workflows/call-docker-build.yml
+++ b/.github/workflows/call-docker-build.yml
@@ -27,7 +27,7 @@ jobs:
     name: Call Docker Build
 
     # FIXME: fork this repo and update this path to YOUR reusable workflow location
-    uses: hardlydevops/actions/.github/workflows/reusable-docker-build.yaml@main
+    uses: hardlydevops/actions/.github/workflows/reusable-docker-build.yml@main
 
     # set permissions here to be equal or greater than what's required in the Reusable Workflow
     # Permisions set here for the GITHUB_TOKEN are then passed to the Reusable Workflow
