--- a/.github/workflows/call-docker-build.yml
+++ b/.github/workflows/call-docker-build.yml
@@ -73,3 +73,10 @@ jobs:
       # platforms: linux/amd64
       
       # comment-enable: true
+  # 2nd job in Workflow, 2 spaces indented
+  scan:
+    name: Scan Image
+    needs: call-docker-build
+    uses: hardlydevops/actions/.github/workflows/reusable-trivy.yml@main
+    with:
+      image: 'ghcr.io/hardlydevops/wordsmith-web:${{ needs.call-docker-build.outputs.image-tag }}'
